ext/phar/phar_path_check.c
/* Generated by re2c 0.13.5 */
#line 1 "ext/phar/phar_path_check.re"
/*
  +----------------------------------------------------------------------+
  | phar php single-file executable PHP extension                        |
  +----------------------------------------------------------------------+
  | Copyright (c) 2007-2013 The PHP Group                                |
  +----------------------------------------------------------------------+
  | This source file is subject to version 3.01 of the PHP license,      |
  | that is bundled with this package in the file LICENSE, and is        |
  | available through the world-wide-web at the following url:           |
  | http://www.php.net/license/3_01.txt.                                 |
  | If you did not receive a copy of the PHP license and are unable to   |
  | obtain it through the world-wide-web, please send a note to          |
  | license@php.net so we can mail you a copy immediately.               |
  +----------------------------------------------------------------------+
  | Authors: Marcus Boerger <helly@php.net>                              |
  +----------------------------------------------------------------------+
*/

/* $Id$ */

#include "phar_internal.h"

phar_path_check_result phar_path_check(char **s, int *len, const char **error)
{
	const unsigned char *p = (const unsigned char*)*s;
	const unsigned char *m;

	if (*len == 1 && *p == '.') {
		*error = "current directory reference";
		return pcr_err_curr_dir;
	} else if (*len == 2 && p[0] == '.' && p[1] == '.') {
		*error = "upper directory reference";
		return pcr_err_up_dir;
	}

#define YYCTYPE         unsigned char
#define YYCURSOR        p
#define YYLIMIT         p+*len
#define YYMARKER        m
#define YYFILL(n)

loop:

#line 47 "ext/phar/phar_path_check.c"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if ((YYLIMIT - YYCURSOR) < 4) YYFILL(4);
	yych = *YYCURSOR;
	if (yych <= '>') {
		if (yych <= 0x19) {
			if (yych <= 0x00) goto yy16;
			if (yych == '\n') goto yy15;
			goto yy14;
		} else {
			if (yych <= '*') {
				if (yych <= ')') goto yy18;
				goto yy6;
			} else {
				if (yych != '/') goto yy18;
			}
		}
	} else {
		if (yych <= 0x7F) {
			if (yych <= '?') goto yy8;
			if (yych == '\\') goto yy4;
			goto yy18;
		} else {
			if (yych <= 0xDF) {
				if (yych <= 0xBF) goto yy14;
				goto yy10;
			} else {
				if (yych <= 0xEF) goto yy12;
				if (yych <= 0xF7) goto yy13;
				goto yy14;
			}
		}
	}
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '-') goto yy3;
	if (yych <= '.') goto yy29;
	if (yych <= '/') goto yy30;
yy3:
#line 105 "ext/phar/phar_path_check.re"
	{
			goto loop;
		}
#line 93 "ext/phar/phar_path_check.c"
yy4:
	++YYCURSOR;
#line 63 "ext/phar/phar_path_check.re"
	{
			*error = "back-slash";
			return pcr_err_back_slash;
		}
#line 101 "ext/phar/phar_path_check.c"
yy6:
	++YYCURSOR;
#line 67 "ext/phar/phar_path_check.re"
	{
			*error = "star";
			return pcr_err_star;
		}
#line 109 "ext/phar/phar_path_check.c"
yy8:
	++YYCURSOR;
#line 71 "ext/phar/phar_path_check.re"
	{
			if (**s == '/') {
				(*s)++;
			}
			*len = (p - (const unsigned char*)*s) -1;
			*error = NULL;
			return pcr_use_query;
		}
#line 121 "ext/phar/phar_path_check.c"
yy10:
	++YYCURSOR;
	if ((yych = *YYCURSOR) <= 0x7F) goto yy11;
	if (yych <= 0xBF) goto yy27;
yy11:
#line 88 "ext/phar/phar_path_check.re"
	{
			*error ="illegal character";
			return pcr_err_illegal_char;
		}
#line 132 "ext/phar/phar_path_check.c"
yy12:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 0x7F) goto yy11;
	if (yych <= 0xBF) goto yy24;
	goto yy11;
yy13:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 0x7F) goto yy11;
	if (yych <= 0xBF) goto yy19;
	goto yy11;
yy14:
	yych = *++YYCURSOR;
	goto yy11;
yy15:
	yych = *++YYCURSOR;
	goto yy11;
yy16:
	++YYCURSOR;
#line 92 "ext/phar/phar_path_check.re"
	{
			if (**s == '/') {
				(*s)++;
				(*len)--;
			}
			if ((p - (const unsigned char*)*s) - 1 != *len)
			{
				*error ="illegal character";
				return pcr_err_illegal_char;
			}
			*error = NULL;
			return pcr_is_ok;
		}
#line 167 "ext/phar/phar_path_check.c"
yy18:
	yych = *++YYCURSOR;
	goto yy3;
yy19:
	yych = *++YYCURSOR;
	if (yych <= 0x7F) goto yy20;
	if (yych <= 0xBF) goto yy21;
yy20:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 0) {
		goto yy3;
	} else {
		goto yy11;
	}
yy21:
	yych = *++YYCURSOR;
	if (yych <= 0x7F) goto yy20;
	if (yych >= 0xC0) goto yy20;
	++YYCURSOR;
#line 85 "ext/phar/phar_path_check.re"
	{
			goto loop;
	}
#line 191 "ext/phar/phar_path_check.c"
yy24:
	yych = *++YYCURSOR;
	if (yych <= 0x7F) goto yy20;
	if (yych >= 0xC0) goto yy20;
	++YYCURSOR;
#line 82 "ext/phar/phar_path_check.re"
	{
			goto loop;
	}
#line 201 "ext/phar/phar_path_check.c"
yy27:
	++YYCURSOR;
#line 79 "ext/phar/phar_path_check.re"
	{
			goto loop;
	}
#line 208 "ext/phar/phar_path_check.c"
yy29:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy33;
	if (yych <= '-') goto yy20;
	if (yych <= '.') goto yy32;
	if (yych <= '/') goto yy33;
	goto yy20;
yy30:
	++YYCURSOR;
#line 51 "ext/phar/phar_path_check.re"
	{
			*error = "double slash";
			return pcr_err_double_slash;
		}
#line 223 "ext/phar/phar_path_check.c"
yy32:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy35;
	if (yych == '/') goto yy35;
	goto yy20;
yy33:
	++YYCURSOR;
#line 59 "ext/phar/phar_path_check.re"
	{
			*error = "current directory reference";
			return pcr_err_curr_dir;
		}
#line 236 "ext/phar/phar_path_check.c"
yy35:
	++YYCURSOR;
#line 55 "ext/phar/phar_path_check.re"
	{
			*error = "upper directory reference";
			return pcr_err_up_dir;
		}
#line 244 "ext/phar/phar_path_check.c"
}
#line 108 "ext/phar/phar_path_check.re"

}
